# bb-bot

./: .env.example  .gitignore  Cargo.toml
data/scripts/: clear_all_role_caches.sql  default_bingo_kind_mappings.sql  reset_hob_entries_Jul2025.sql
macros/: Cargo.toml
macros/src/: lib.rs  modal.rs
src/: config.rs  error.rs  log.rs  main.rs
src/commands/: baninfo.rs  debug.rs  hob.rs  lastsplashed.rs  latestsplash.rs  mod.rs  register.rs  role.rs  splashlist.rs  splashreminder.rs
src/db/: db_thread.rs  mod.rs
src/hob/: db.rs  interaction.rs  menu.rs  mod.rs  types.rs
src/hob/db/: read.rs  write.rs
src/hob/interaction/: modal.rs  select_entry.rs  view_entry.rs  view_subentry.rs
src/hob/menu/: format.rs  select_entry.rs  view_entry.rs
src/hypixel_api/: hypixel.rs  mod.rs  mojang.rs
src/hypixel_api/hypixel/: network_bingo.rs
src/role/: db.rs  interaction.rs  menu.rs  mod.rs  request.rs  types.rs
src/role/db/: link.rs
src/role/db/cache/: read.rs  write.rs
src/role/db/role_config/: read.rs  write.rs
src/role/interaction/: config.rs  modal.rs  request.rs
src/role/menu/: configure_roles.rs
src/shared/: db.rs  interaction.rs  menu.rs  mod.rs  types.rs
src/shared/db/: read.rs  write.rs
src/shared/interaction/: modal.rs
src/shared/menu/: navigation.rs  timeout.rs
src/splash_reminder/: event.rs  mod.rs  reminder.rs
src/splashes/: fetch.rs  lastsplashed.rs  mod.rs  splashlist.rs
src/splashes/splashlist/: chart.rs  mod.rs
src/splashlist/: chart.rs  mod.rs
