[workspace]
resolver = "3"
members = ["macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "bb-bot"
version.workspace = true
edition.workspace = true

[dependencies]
bb-bot-macros = { path = "macros" }

anyhow = "1.0.99"
chrono = "0.4.42"
dotenvy = "0.15.7"
either = "1.15.0"
image = "0.25.8"
plotters = "0.3.7"
# fork for components v2 support
poise = { git = "https://github.com/BossFlea/poise.git", branch = "serenity-next" }
rand = "0.9.2"
regex = "1.12.2"
reqwest = "0.12.23"
resvg = "0.45.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
