[workspace]
resolver = "3"
members = ["macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "bb-bot"
version.workspace = true
edition.workspace = true

[dependencies]
bb-bot-macros = { path = "macros" }

anyhow = "1.0.101"
chrono = "0.4.43"
dotenvy = "0.15.7"
either = "1.15.0"
image = "0.25.9"
plotters = "0.3.7"
# branch with components v2 support
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", features = ["unstable"] }
rand = "0.9.2"
regex = "1.12.3"
reqwest = "0.12.28"
resvg = "0.45.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
